--- a/frontend/app/views/groups/_form.html.erb
+++ b/frontend/app/views/groups/_form.html.erb
@@ -1,4 +1,4 @@
-<%= f.label_field_pair :description %>
+<%= f.label_and_field :description %>
 
 <div class="control-group">
   <label for="userlist" class="control-label"><%= I18n.t("group.members") %></label>
