--- a/frontend/app/views/agents/_contact_details.html.erb
+++ b/frontend/app/views/agents/_contact_details.html.erb
@@ -1,18 +1,18 @@
 <div class="subform agent-contact-fields">
   <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>  
   <div class="subform-container">
-    <%= f.label_field_pair :name %>
-    <%= f.label_field_pair :salutation %>
-    <%= f.label_field_pair :address_1 %>
-    <%= f.label_field_pair :address_2 %>
-    <%= f.label_field_pair :address_3 %>
-    <%= f.label_field_pair :city %>
-    <%= f.label_field_pair :region %>
-    <%= f.label_field_pair :country %>
-    <%= f.label_field_pair :post_code %>
-    <%= f.label_field_pair :telephone %>
-    <%= f.label_field_pair :telephone_ext %>
-    <%= f.label_field_pair :fax %>
-    <%= f.label_field_pair :email %>
+    <%= f.label_and_field :name %>
+    <%= f.label_and_field :salutation %>
+    <%= f.label_and_field :address_1 %>
+    <%= f.label_and_field :address_2 %>
+    <%= f.label_and_field :address_3 %>
+    <%= f.label_and_field :city %>
+    <%= f.label_and_field :region %>
+    <%= f.label_and_field :country %>
+    <%= f.label_and_field :post_code %>
+    <%= f.label_and_field :telephone %>
+    <%= f.label_and_field :telephone_ext %>
+    <%= f.label_and_field :fax %>
+    <%= f.label_and_field :email %>
   </div>
 </div>
