--- a/frontend/app/views/extent/_form.html.erb
+++ b/frontend/app/views/extent/_form.html.erb
@@ -3,12 +3,12 @@
     <a href="javascript:void(0)" class="btn btn-mini pull-right subform-remove"><span class='icon-remove'></span></a>
   <% end %>
   <div class="extent-container">
-    <%= f.label_field_pair :portion %>
-    <%= f.label_field_pair :number %>
-    <%= f.label_field_pair :extent_type %>
+    <%= f.label_and_field :portion %>
+    <%= f.label_and_field :number %>
+    <%= f.label_and_field :extent_type %>
     <hr/>
-    <%= f.label_textarea_pair :container_summary %>
-    <%= f.label_textarea_pair :physical_details %>
-    <%= f.label_field_pair :dimensions %>
+    <%= f.label_and_textarea :container_summary %>
+    <%= f.label_and_textarea :physical_details %>
+    <%= f.label_and_field :dimensions %>
   </div>
 </div>
