--- a/frontend/app/views/groups/new.erb
+++ b/frontend/app/views/groups/new.erb
@@ -10,7 +10,7 @@
     <h2>New Group <span class="label label-info">Group</span></h2>
 
     <%= form_for @group, :as => "group", :url => {:action => :create}, :html => {:class => 'form-horizontal'} do |f| %>
-    <%= f.label_field_pair :group_code %>
+    <%= f.label_and_field :group_code %>
     <%= render :partial => "groups/form", :locals => {:f => f} %>
     <% end %>
   </div>
