--- a/frontend/app/views/resources/forms/_basic_information.html.erb
+++ b/frontend/app/views/resources/forms/_basic_information.html.erb
@@ -1,3 +1,3 @@
-<%= f.label_field_pair :title %>
+<%= f.label_and_field :title %>
 <%= f.label_and_fourpartid :id_0 %>
 <%= render :partial => "subjects/linker", :locals => { :object => @resource }%>
