Add show string for bulk and inclusive date types on #show template

--- a/frontend/app/views/dates/_show.html.erb
+++ b/frontend/app/views/dates/_show.html.erb
@@ -18,6 +18,7 @@
               <% elsif date['date_type'] === "single" %>
                 <%= date['begin'] %> <%= date['begin_time'] %>
               <% else %>
+                <%= date['begin'] %> <%= date['begin_time'] %> &ndash; <%= date['end'] %> <%= date['end_time'] %>
               <% end %>
             </div>
             <div class="span3">
