Refactor date.crud.js to handle date forms added to DOM via ajax; Add date form/display to resource and archival objects pages;

--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -18,5 +18,10 @@
     </section>
 
     <%= render :partial => "extent/show", :locals => { :extents => @archival_object.extents } %>
+
+    <% if @archival_object.dates.length > 0 %>
+      <%= render :partial => "dates/show", :locals => { :dates => @archival_object.dates } %>
+    <% end %>
+
   </div>
 </div>
