refactor extent form javascript into own js resource (to follow style of date js)

--- a/frontend/app/assets/javascripts/resources.crud.js.erb
+++ b/frontend/app/assets/javascripts/resources.crud.js.erb
@@ -3,6 +3,7 @@
 //= require jstree
 //= require subjects.crud
 //= require dates.crud
+//= require extent.crud
 
 $(function() {
 
@@ -322,19 +323,6 @@ $(function() {
   };
 
 
-  var addEventBindings = function() {
-    $container.on("click", "#extent > h3 > .btn", function() {
-      var extent_forms = $(".subform.extent-fields").length;
-      $("#extents_container", $container).append(AS.renderTemplate("extent_form_template", {index: extent_forms}));
-      $("form", $container).triggerHandler("form-changed");
-    });
-     $container.on("click", ".subform-remove", function() {
-       $(this).parents(".subform:first").remove();
-       $("form", $container).triggerHandler("form-changed");
-     });
-  }
-
-
   var confirmChanges = function(targetNodeEl) {
     var parentIdForNewAO;
     if (targetNodeEl.attr("id") === "newAO") {
@@ -498,9 +486,6 @@ $(function() {
       loadPaneForNode($(".selected", $tree));
     });
     addTreeEventBindings();
-    addEventBindings();
-  } else {
-    addEventBindings();
   }
 
 });
