--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -16,6 +16,9 @@
                   <% end %>
                <% end %>
                <li class="divider"></li>
+            <% else %>
+              <li><span class="icon-info-sign"></span> No repositories yet</li>
+              <li class="divider"></li>
             <% end %>
             <% if user_can?('create_repository') %>
                <li><%= link_to "Create a Repository", {:controller => :repository, :action => :new}, "data-toggle" => "modal-ajax" %></li>
