--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -47,8 +47,28 @@
 </section>
 
 
+<section id="external_documents">
+  <h3>
+    External Documents
+    <input type="button" class="btn btn-small pull-right" value="Add External Document"/>
+  </h3>
+  <div id="external_documents_container">
+    <% if @accession.external_documents.blank? %>
+      <p class="alert alert-info">Click 'Add External Document' to add an external document record.</p>
+    <% else %>
+      <% @accession.external_documents.each_with_index do | external_document, index | %>
+        <% f.with_jsonmodel("external_documents[]", external_document, :external_document) do %>
+          <%= render :partial => "external_documents/form", :locals => {:f => f, :index => index} %>
+        <% end %>
+      <% end %>
+    <% end %>
+  </div>
+</section>
+
+
 <%= render :partial => "extent/template", :locals => {:f => f} %>
 <%= render :partial => "dates/template", :locals => {:f => f} %>
+<%= render :partial => "external_documents/template", :locals => {:f => f} %>
 
 <div class="form-actions">            
   <button type="submit" class="btn btn-primary">Save Accession</button>
