--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -23,5 +23,9 @@
       <%= render :partial => "dates/show", :locals => { :dates => @archival_object.dates } %>
     <% end %>
 
+    <% if @archival_object.external_documents.length > 0 %>
+      <%= render :partial => "external_documents/show", :locals => { :external_documents => @archival_object.external_documents } %>
+    <% end %>
+
   </div>
 </div>
