--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -4,9 +4,11 @@
       <%= render :partial => "sidebar" %>
    </div>
    <div class="span9 record-pane">
-      <div class="btn-group" style="float: right">
-        <%= link_to "Edit", {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn" %>
-      </div>
+     <% if user_can?('update_repository') %>
+        <div class="btn-group" style="float: right">
+          <%= link_to "Edit", {:controller => :accessions, :action => :edit, :id => @accession.id}, :class => "btn" %>
+        </div>
+      <% end %>
       <h2><%= @accession.title %> <span class="label label-info">Accession</span></h2>
 
       <section id="basic_information">
