--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -5,7 +5,9 @@
    </div>
    <div class="span9 record-pane">
      <div class="btn-group" style="float: right">
-       <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => @agent.id, :type => @agent.agent_type}, :class => "btn btn-small" %>
+       <% if user_can?('update_repository') %>
+         <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => @agent.id, :type => @agent.agent_type}, :class => "btn btn-small" %>
+       <% end %>
      </div>
 
       <h2><%= @agent.names[0]['sort_name'] %>  <span class="label label-info">Agent</span></h2>
