--- a/frontend/app/views/resources/_show_inline.html.erb
+++ b/frontend/app/views/resources/_show_inline.html.erb
@@ -4,7 +4,9 @@
   </div>
   <div class="span9 record-pane">
     <div class="btn-group" style="float: right">
-      <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small" %>
+      <% if user_can?('update_repository') %>
+        <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => @resource.id, :anchor => "resource_#{@resource.id}"}, :class => "btn btn-small" %>
+      <% end %>
     </div>
     <h2><%= @resource.title %> <span class="label label-info">Resource</span></h2>
     <section id="basic_information">
