--- a/frontend/app/views/resources/index.html.erb
+++ b/frontend/app/views/resources/index.html.erb
@@ -5,7 +5,9 @@
    </div>
    <div class="span9 record-pane">
       <div class="btn-group">
-        <%= link_to "Create Resource", {:controller => :resources, :action => :new}, :class => "btn" %>
+        <% if user_can?('update_repository') %>
+          <%= link_to "Create Resource", {:controller => :resources, :action => :new}, :class => "btn" %>
+        <% end %>
       </div>
 
       <h2>Resources</h2>
@@ -25,7 +27,9 @@
               <td>
                  <div class="btn-group" style="float: right">
                    <%= link_to "View", {:controller => :resources, :action => :show, :id => resource.id}, :class => "btn btn-mini" %>
-                   <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => resource.id}, :class => "btn btn-mini" %>
+                   <% if user_can?('update_repository') %>
+                     <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => resource.id}, :class => "btn btn-mini" %>
+                   <% end %>
                  </div>
               </td>
             </tr>
