--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -23,24 +23,26 @@
                 <li><%= link_to "Agents", :controller => :agents, :action => :index %></li>
               </ul>
             </li>
-            <li class="dropdown create-container">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Accession", :controller => :accessions, :action => :new %></li>
-                <li><%= link_to "Resource", :controller => :resources, :action => :new %></li>
-                <li class="divider"></li>
-                <li><%= link_to "Subject", :controller => :subjects, :action => :new %></li>
-                <li class="dropdown-submenu">
-                  <a href="javascript:void(0);">Agent</a>
-                  <ul class="dropdown-menu">
-                    <li><%= link_to "Person", :controller => :agents, :action => :new, :type => :agent_person %></li>
-                    <li><%= link_to "Family", :controller => :agents, :action => :new, :type => :agent_family %></li>
-                    <li><%= link_to "Corporate Entity", :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
-                    <li><%= link_to "Software", :controller => :agents, :action => :new, :type => :agent_software %></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
+            <% if user_can?('update_repository') %>
+              <li class="dropdown create-container">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Accession", :controller => :accessions, :action => :new %></li>
+                  <li><%= link_to "Resource", :controller => :resources, :action => :new %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Subject", :controller => :subjects, :action => :new %></li>
+                  <li class="dropdown-submenu">
+                    <a href="javascript:void(0);">Agent</a>
+                    <ul class="dropdown-menu">
+                      <li><%= link_to "Person", :controller => :agents, :action => :new, :type => :agent_person %></li>
+                      <li><%= link_to "Family", :controller => :agents, :action => :new, :type => :agent_family %></li>
+                      <li><%= link_to "Corporate Entity", :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
+                      <li><%= link_to "Software", :controller => :agents, :action => :new, :type => :agent_software %></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            <% end %>
             <% if user_can?('manage_repository') %>
               <li class="dropdown admin-container">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
