--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -72,6 +72,11 @@
               end %>
           </section>
         </div>
-      <% end %>      
+      <% end %>
+
+      <% if @agent.external_documents.length > 0 %>
+        <%= render :partial => "external_documents/show", :locals => { :external_documents => @agent.external_documents } %>
+      <% end %>
+
     </div>
 </div>
