--- a/frontend/app/views/agents/_sidebar.html.erb
+++ b/frontend/app/views/agents/_sidebar.html.erb
@@ -11,6 +11,10 @@
       <li><a href="#contacts">Contact Details <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
+    <% if not controller.action_name === "show" or @agent.external_documents.length > 0 %>
+      <li><a href="#external_documents">External Documents <span class="icon-chevron-right"></span></a></li>
+    <% end %>
+
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
