--- a/frontend/app/views/subjects/show.html.erb
+++ b/frontend/app/views/subjects/show.html.erb
@@ -1,20 +1,28 @@
 <%= render :partial => "shared/breadcrumb", :locals => {:trail => [link_to("Browse Subjects", :controller => :subjects, :action => :index), @subject.display_string]} %>
 <div class="row-fluid">
    <div class="span3">
-      List all subjects here for quick access.
+      <%= render :partial => "sidebar" %>
    </div>
    <div class="span9 record-pane">
       <h2><%= @subject.display_string %>  <span class="label label-info">Subject</span></h2>
-      <br/>
-      <div class="row-fluid">
+
+      <section id="terms">
+        <h3>Terms</h3>
+        <div class="row-fluid">
           <div class="span6"><strong>Term</strong></div>
           <div class="span6"><strong>Type</strong></div>
-      </div>
-      <% @subject.terms.each do | term | %>
+        </div>
+        <% @subject.terms.each do | term | %>
          <div class="row-fluid">
              <div class="span6"><%= term["term"] %></div>
              <div class="span6"><%= term["term_type"] %></div>
          </div>
+        <% end %>
+      </section>
+
+      <% if @subject.external_documents.length > 0 %>
+        <%= render :partial => "external_documents/show", :locals => { :external_documents => @subject.external_documents } %>
       <% end %>
+
    </div>
 </div>
