--- a/frontend/app/views/shared/_templates.html.erb
+++ b/frontend/app/views/shared/_templates.html.erb
@@ -77,3 +77,12 @@
       ${item.name}
    </li>
 --></div>
+
+<div id="subform_remove_confirmation_template"><!--
+   <div class="pull-right subform-removal-confirmation">
+    <div class="btn-group">
+      <button class="btn btn-small cancel-removal">Cancel</button>
+      <button class="btn btn-small btn-primary confirm-removal">Confirm Removal</button>
+     </div>
+   </div>
+--></div>
