--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -15,9 +15,13 @@
       <input type="button" class="btn btn-small pull-right" value="Add Extent"/>
     </h3>
     <div id="extents_container">
-      <% @archival_object.extents.each_with_index do | extent, index | %>
-        <% f.with_jsonmodel("extents[]", extent, :extent) do %>
-          <%= render :partial => "extent/form", :locals => {:f => f, :index => index} %>
+      <% if @archival_object.extents.blank? %>
+        <p class="alert alert-info">Click 'Add Extend' to add an extent record.</p>
+      <% else %>
+        <% @archival_object.extents.each_with_index do | extent, index | %>
+          <% f.with_jsonmodel("extents[]", extent, :extent) do %>
+            <%= render :partial => "extent/form", :locals => {:f => f} %>
+          <% end %>
         <% end %>
       <% end %>
     </div>
