--- a/frontend/app/views/archival_objects/_sidebar.html.erb
+++ b/frontend/app/views/archival_objects/_sidebar.html.erb
@@ -1,7 +1,10 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list affix as-nav-list" data-spy="affix">
     <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#extent">Extent <span class="icon-chevron-right"></span></a></li>
+
+    <% if controller.action_name != "show" || @archival_object.extents.length > 0 %>
+      <li><a href="#extent">Extent <span class="icon-chevron-right"></span></a></li>
+    <% end %>
 
     <% if controller.action_name != "show" || @archival_object.dates.length > 0 %>
       <li><a href="#dates">Dates <span class="icon-chevron-right"></span></a></li>
