--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -20,7 +20,7 @@
   </h3>
   <div id="extents_container">
     <% if @accession.extents.blank? %>
-      <p class="alert alert-info">Click 'Add Extend' to add an extent record.</p>
+      <p class="alert alert-info">Click 'Add Extent' to add an extent record.</p>
     <% else %>
       <% @accession.extents.each_with_index do | extent, index | %>
         <% f.with_jsonmodel("extents[]", extent, :extent) do %>
